add verify_sms_code in api.php
