# routes/api.php
@@ -20,5 +20,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::prefix('/v1')->namespace('Api\V1')->group(function () {
     Route::post('send_sms', [\App\Http\Controllers\Api\V1\AuthController::class, 'sendSms']);
+    Route::post('verify_sms_code', [\App\Http\Controllers\Api\V1\AuthController::class, 'verifySms']);
 });
 
